--- a/src/common/Configurations/Library.xcconfig
+++ b/src/common/Configurations/Library.xcconfig
@@ -34,11 +34,11 @@ SKIP_INSTALL = YES
 //WARNING_CFLAGS = -Wno-unused-value
 
 FRAMEWORK_SEARCH_PATHS = "$(SDKROOT)/Developer/Library/Frameworks"
-IPHONEOS_DEPLOYMENT_TARGET = 3.0
+IPHONEOS_DEPLOYMENT_TARGET = 4.0
 SDKROOT = iphoneos
 // Required for older iOS devices (iPhone 3G)
 ARCHS = $(ARCHS_STANDARD_32_BIT)
-ARCHS[sdk=iphoneos*] = armv6 armv7
+ARCHS[sdk=iphoneos*] = armv7 armv7s
 
 // Linker Flags
 
